[project]
name = "ether"
version = "0.1.0"
description = "Developer focused framework for building distributed data acquisition and analysis systems."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyzmq>=26.2.0",
    "pydantic>=2.9.2",
    "psutil>=6.1.0",
    "sqlalchemy>=2.0.36",
    "redis>=5.2.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
