[project]
name = "ether-python"
version = "2025.1.2a1"
authors = [
  { name="Shababo", email="benshababo@gmail.com" }
]
description = "Developer focused framework for building distributed data acquisition and analysis systems."
readme = "README.md"
licencse = "Attribution-NonCommercial-ShareAlike 4.0 International"
license-files=["LICEN[CS]E*"]
requires-python = ">=3.10"
dependencies = [
    "pyzmq>=26.2.0",
    "pydantic>=2.9.2",
    "psutil>=6.1.0",
    "sqlalchemy>=2.0.36",
    "redis>=5.2.0",
    "pyyaml>=6.0.2",
    "click>=8.1.7",
    "requests>=2.32.3",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
integrations-base = [
    "pyserial>=3.5",
    
]
integrations-oephys = [
    "open-ephys-python-tools>=0.1.12",
]
integrations-airtable = [
    "pyairtable>=1.1.0",
]
webapp = [
    "dash>=2.18.2",
    "dash-ag-grid>=31.3.0",
    "dash-iconify>=0.1.2",
    "dash-lumino-components>=0.0.20",
    "dash-mantine-components>=0.15.1",
]

[project.urls]
Homepage = "https://github.com/shababo/ether"
Issues = "https://github.com/shababo/ether/issues"

[dependency-groups]
dev = [
  "pytest",
  "twine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ether"]
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
